# Rust-JWT-Lambda-Auth

./: Cargo.toml  Readme.md
src/: main.rs
src/helpers/: jwtValidation.rs  jwt_validation.rs  mod.rs  policyBuilder.rs  policy_builder.rs
