[package]
name = "jwtAuth"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = { version = "0.7.3", default-features = false, features = ["apigw"] }
lambda_runtime = "0.7"
serde = {version="1.0.152", features = ["derive"]}
serde_json = "1.0.93"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
jsonwebtoken = "8"
reqwest = { version = "0.11", features = ["json", "blocking"] }
lazy_static = "1.4.0"
serde_variant = "0.1.2"
